Added jojowiki to credits

--- a/credits.html
+++ b/credits.html
@@ -11,6 +11,7 @@
         <h1><a href="index.html"><span style="color:lightsteelblue;">STAND</span><span style="color: white;">LE</span></a></h1>
         <h3>CREDITS </h3>
         <li>Original idea from <a href="https://www.nytimes.com/games/wordle/index.html">Wordle</a></li>
+        <li>Stand names and stats from the <a href="https://jojowiki.com">Jojo Wiki</a></li>
         <li>Scrolling star background by <a href="https://codepen.io/Hyperplexed/pen/zYXZoZg">Hyperplexed</a></li>
     </div>
 </body>
