Added myself as credit ofc

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 </body>
 <footer>
-    <a href="credits.html">Credits</a>
+    <a href="credits.html">Credits</a> - This game was made by <a href="toxicscientist.github.io">Nerdopedia</a>
 </footer>
 <script defer="true" src="./Stands.js"></script>
 </html>
